--- a/docs/src/pages/versions/index.astro
+++ b/docs/src/pages/versions/index.astro
@@ -102,11 +102,17 @@ const schemaData = {
           joinURL(BASE_URL, "versions", latestRelease.tag_name),
         )}
         ><strong>{latestRelease.tag_name}</strong>
-        (<local-date data-date={latestRelease.published_at}
-          ><time datetime={latestRelease.published_at}
-            >{latestRelease.published_at}</time
-          ></local-date
-        >)
+        {
+          [
+            "(",
+            <local-date data-date={latestRelease.published_at}>
+              <time datetime={latestRelease.published_at}>
+                {latestRelease.published_at}
+              </time>
+            </local-date>,
+            ")",
+          ]
+        }
       </a>
     </p>
 
@@ -138,13 +144,15 @@ const schemaData = {
               )}
             >
               {release.tag_name}
-              {/* prettier-ignore */}(
-              <local-date data-date={release.published_at}>
-                <time datetime={release.published_at}>
-                  {release.published_at}
-                </time>
-              </local-date>
-              )
+              {[
+                "(",
+                <local-date data-date={release.published_at}>
+                  <time datetime={release.published_at}>
+                    {release.published_at}
+                  </time>
+                </local-date>,
+                ")",
+              ]}
             </a>
           </li>
         ))
