--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -174,7 +174,10 @@ const structuredData = {
       </ul>
 
       <p id="rating">
-        ⭐️ Rated {aggregateRating.ratingValue} / 5 ({aggregateRating.reviewCount} {aggregateRating.reviewCount === "1" ? "review" : "reviews"}) on <a
+        ⭐️ Rated {aggregateRating.ratingValue} / 5 ({
+          aggregateRating.reviewCount
+        }
+        {aggregateRating.reviewCount === "1" ? "review" : "reviews"}) on <a
           href="https://obsproject.com/forum/resources/live-background-removal-lite.2226/"
           target="_blank"
           rel="noopener noreferrer">OBS Forums</a
