--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -25,14 +25,14 @@ const { BASE_URL } = import.meta.env;
             `default-src 'self';`,
 
             `connect-src 'self' https://cloudflareinsights.com;`,
-            `script-src 'self' https://static.cloudflareinsights.com;`,
+            `script-src 'self' https://static.cloudflareinsights.com/beacon.min.js;`,
             `style-src 'self'${additionalCssHashes ?? ""};`,
 
             `base-uri 'none';`,
             `font-src 'self';`,
             `form-action 'self';`,
             `frame-src 'none';`,
-            `img-src 'self' data:;`,
+            `img-src 'self' https://github.com/kaito-tokyo/live-backgroundremoval-lite/actions/workflows/daily-website-security-check.yaml/badge.svg;`,
             `manifest-src 'self';`,
             `object-src 'none';`,
             `require-trusted-types-for 'script';`,
@@ -116,7 +116,7 @@ const { BASE_URL } = import.meta.env;
     margin: 0;
   }
 
-  footer, footer a {
+  footer {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
