--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -79,8 +79,15 @@ const { BASE_URL } = import.meta.env;
       <footer>
         <p>&copy; 2025 Kaito Udagawa</p>
         <p id="daily-website-security-check">
-          <a href="https://github.com/kaito-tokyo/live-backgroundremoval-lite/actions/workflows/daily-website-security-check.yaml" target="_blank" rel="noopener noreferrer">
-            <img src="https://github.com/kaito-tokyo/live-backgroundremoval-lite/actions/workflows/daily-website-security-check.yaml/badge.svg" alt="Daily Website Security Check">
+          <a
+            href="https://github.com/kaito-tokyo/live-backgroundremoval-lite/actions/workflows/daily-website-security-check.yaml"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              src="https://github.com/kaito-tokyo/live-backgroundremoval-lite/actions/workflows/daily-website-security-check.yaml/badge.svg"
+              alt="Daily Website Security Check"
+            />
           </a>
         </p>
         <p>
@@ -121,7 +128,7 @@ const { BASE_URL } = import.meta.env;
     flex-wrap: wrap;
     align-items: center;
     color: white;
-    gap: .3rem;
+    gap: 0.3rem;
   }
 
   footer a {
