--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -5,10 +5,10 @@ import "../styles/global.css";
 interface Props {
   lang: string;
   title: string;
-  additionalCssHashes?: string;
+  trustedTypes?: string[];
 }
 
-const { lang, title, additionalCssHashes } = Astro.props;
+const { lang, title, trustedTypes } = Astro.props;
 const { BASE_URL } = import.meta.env;
 ---
 
@@ -25,17 +25,19 @@ const { BASE_URL } = import.meta.env;
             `default-src 'self';`,
 
             `connect-src 'self' https://cloudflareinsights.com;`,
+            `img-src 'self' data: https://github.com/kaito-tokyo/live-backgroundremoval-lite/actions/workflows/daily-website-security-check.yaml/badge.svg;`,
             `script-src 'self' https://static.cloudflareinsights.com;`,
-            `style-src 'self'${additionalCssHashes ?? ""};`,
+            `style-src 'self';`,
+
+            `require-trusted-types-for 'script';`,
+            `trusted-types${trustedTypes && Array.isArray(trustedTypes) && trustedTypes.length > 0 ? " " + trustedTypes.join(" ") : ""};`,
 
             `base-uri 'none';`,
             `font-src 'self';`,
             `form-action 'self';`,
             `frame-src 'none';`,
-            `img-src 'self' data: https://github.com/kaito-tokyo/live-backgroundremoval-lite/actions/workflows/daily-website-security-check.yaml/badge.svg;`,
             `manifest-src 'self';`,
             `object-src 'none';`,
-            `require-trusted-types-for 'script';`,
             `upgrade-insecure-requests;`,
             `worker-src 'self';`,
           ].join(" ")}
