--- a/docs/src/pages/interactive-help.astro
+++ b/docs/src/pages/interactive-help.astro
@@ -2,13 +2,18 @@
 import { joinURL, withTrailingSlash } from "ufo";
 
 import Layout from "../layouts/Layout.astro";
-import Chat from "../components/Chat.svelte";
 import { GITHUB_URL } from "../lib/info.js";
+
+import "../components/LBRLBuddy.ts";
 
 const { BASE_URL } = import.meta.env;
 ---
 
-<Layout lang="en" title="Interactive Help for OBS Background Removal">
+<Layout
+  lang="en"
+  title="Interactive Help for OBS Background Removal"
+  trustedTypes={["lit-html"]}
+>
   <Fragment slot="head">
     <meta
       name="description"
@@ -17,7 +22,6 @@ const { BASE_URL } = import.meta.env;
   </Fragment>
 
   <main class="white-box">
-    <Chat client:load />
 
     <div class="disclaimer-note">
       <p>
